Rename script name

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "start": "webpack serve --mode development --env port=8081",
-    "build:f": "webpack --mode production"
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
